syntax = "proto3";
package messages;

message Action {
  enum FaceDetectionState {
    FACEDETECTION_UNCHANGED = 0;
    FACEDETECTION_ENABLE = 1;
    FACEDETECTION_DISABLE = 2;
  }
  FaceDetectionState faceDetection = 1;

  enum RenderingMode {
    RENDERINGMODE_UNCHANGED = 0;
    RENDERINGMODE_NORMAL = 1;
    RENDERINGMODE_FUN = 2;
  }
  RenderingMode renderingMode = 2;

  int32 Camera = 3;

  bool QuitServer = 4;
}
